# python01-Divyakn52

./: divya.py  nestedif.py  pyproject.toml  que bank.py
ActivitySet01/: problem02.py  problem03.py  problem04.py  problem05.py  problem06.py  problem07.py  problem08.py  problem09.py  problem10.py
