[tool.poetry]
name = "repl_python3_python01-Divyakn52"
version = "0.1.0"
description = ""
authors = ["Divyakn52 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
constant = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
